# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff_actions.yml
finddiff/: fdiff_help.py
gendiff/: .gendiff_main.py.swp  __init__.py  cli.py  cli_parsing.py  content.py  data_parsing.py  diff.py  diff_builder.py  diff_calc.py  diff_main.py  diff_manager.py  fdiff_help.py  files.py  format.py  gendiff_main.py  operations.py  read_file.py
gendiff/content/: __init__.py  content.py  data_parsing.py  parsing.py
gendiff/format/: __init__.py  conform.py  f_json.py  f_plain.py  f_stylish.py  format.py  jsonify.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_data_parsing.py  test_diff.py  test_diff_calc.py  test_format.py  test_gendiff.py  test_gendiff_brain.py  test_gendiff_main.py  test_operations.py
tests/fixtures/: file1.yml  file2.txt  file2.yml  file3.json  file7.json  format_json.txt  format_plain.txt  format_plain_12_json.txt  format_stylish.txt  format_stylish_78.txt  recursive_result.txt  recursive_result_12.txt  recursive_result_56.txt  test_output_mark.txt  test_plain_output  test_result1.txt  test_result2.txt  test_result3.txt
tests/fixtures/input_files/: file8.json
